# qemy

./: .gitignore  CONTRIBUTING.md  DEVLOG.md  LICENSE  NOTICE  README.md  ROADMAP.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: SECURITY.md
backend/cache/database/: db.py
backend/core/: dcf.py  linear_r.py  matplot.py  monte_carlo.py  plot.py  session.py
backend/fetch/: api_edgar.py  api_edgar_bulk.py  api_edgar_lists.py  api_fmp.py  api_fred.py  api_tiingo.py  utils.py  utils_fetch.py
docs/: dev_setup.md  install.md
frontend/: cli.py  cli_edgar.py  cli_fred.py  cli_helper.py  cli_plot.py  cli_tiingo.py  parse_arg.py  utils.py  utils_cli.py
qemy/: __main__.py  _config.py  cli_main.py  exceptions.py
qemy/cli/: __main__.py  _parse_args.py  cli_aux.py  cli_core.py  cli_edgar.py  cli_fred.py  cli_helper.py  cli_metric.py  cli_model.py  cli_plot.py  cli_plugins.py  cli_ratios.py  cli_tiingo.py  cmd_register.py  colors.py  format.py  help_register.py  main.py  menus.py  panels.py
qemy/cli/apis/: cli_edgar.py  cli_fred.py  cli_tiingo.py
qemy/cli/commands/: __init__.py  (+4 more)
qemy/cli_ref/: __main__.py  cmd_register.py  format.py  main.py
qemy/core/: dcf.py  linear_r.py  monte_carlo.py  plugin_base.py  plugin_loader.py  session.py  tools.py  watch_list.py
qemy/data/: __init__.py  _api_tools.py  api_edgar.py  api_edgar_bulk.py  api_edgar_lists.py  api_fred.py  api_tiingo.py
qemy/plot/: plot.py
qemy/plugins/: __init__.py  plugin_base.py  plugin_loader.py  plugin_tools.py
qemy/utils/: env_setup.py  env_tools.py  file_tools.py  filetools.py  parse_arg.py  parse_filing.py  safe_request.py  utils_cli.py  utils_fetch.py
scripts/: qemy  qemy-dev
src/qemy/: __main__.py  exceptions.py
utils/: env_setup.py  filetools.py
(+114 files in other folders)
