[project]
name = "Qemy"
version = "0.2.0"
description = "A Python CLI toolkit for stock market analysis"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Ryan A. Rashidian" }]
dependencies = [
    "numpy",
    "pandas",
    "python-dotenv",
    "requests",
    "rich",
]

[project.scripts]
qemy = "qemy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qemy"]

[tool.ruff]
line-length = 79
target-version = "py313"
lint.select = ["E", "F", "W", "I", "B"]

