[project]
name = "Qemy"
version = "0.2.0"
description = "A Python CLI toolkit for market and economic analysis"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Ryan A. Rashidian" }]
dependencies = [
    "pandas",
    "pydantic",
    "python-dotenv",
    "requests",
    "rich",
]

[project.scripts]
qemy = "qemy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qemy = [
    "cli/format/colors.toml",
    "cli/man/help.md"
]

[tool.ruff]
line-length = 79
target-version = "py313"
lint.select = ["E", "F", "W", "I", "B"]

